增强BaseAdapter的健壮性
-
BaseAdapter支持给GridLayoutManager和StaggeredGridLayoutManager添加Header和Foote
r
- 分割线处理
-

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">RecyclerViewDemo</string>
+    <string name="title_activity_linear_layout_manager">LinearLayoutManagerActivity</string>
 </resources>
